# FEMCourseEigen

./: .gitignore  CMakeLists.txt
headers/: TIntRule1d.h  TIntRuleQuad.h  TIntRuleTriangle.h  TMatrix.h  TVecNum.h  tanalysis.h  telemento.h  telemento0d.h  telemento1d.h  telementoQuad.h  telementoTriangle.h  tmalha.h  tmaterial.h  tmaterial1d.h  tmaterial2d.h  tmaterialbc.h  tno.h
headers2018/: CompElement.h  Poisson.h
headers2021/: Analysis.h  CompElement.h  CompElementTemplate.h  CompMesh.h  DOF.h  DataTypes.h  GeoElement.h  GeoElementTemplate.h  GeomQuad.h  GeomTetrahedron.h  GeomTriangle.h  IntPointData.h  IntRule.h  IntRule1d.h  IntRuleQuad.h  IntRuleTetrahedron.h  L2Projection.h  MathStatement.h  Poisson.h  tpanic.h
mainprograms/: CMakeLists.txt  TestIntegrate.cpp  TestOneDProblem.cpp  TestTwoDProblem.cpp  Testmatrix.cpp  main2021.cpp  mainEigenTest.cpp
src vazio/: CMakeLists.txt  TIntRule1d.cpp  TIntRuleQuad.cpp  TIntRuleTriangle.cpp  tanalysis.cpp  telemento.cpp  telemento0d.cpp  telemento1d.cpp  telementoQuad.cpp  telementoTriangle.cpp  tmalha.cpp  tmaterial1d.cpp  tmaterial2d.cpp  tmaterialbc.cpp  tno.cpp
src_2021/: Assemble.cpp  CMakeLists.txt  CompElement.cpp  CompElementTemplate.cpp  CompMesh.cpp  GeoElement.cpp  GeoElementSide.cpp  GeoElementTemplate.cpp  Geom1d.cpp  GeomQuad.cpp  GeomTetrahedron.cpp  GeomTriangle.cpp  IntRule1d.cpp  IntRuleQuad.cpp  IntRuleTetrahedron.cpp  IntRuleTriangle.cpp  L2Projection.cpp  Poisson.cpp  Shape1d.cpp  ShapeQuad.cpp  ShapeTetrahedron.cpp  ShapeTriangle.cpp  Topology1d.cpp  TopologyQuad.cpp  TopologyTetrahedron.cpp  (+2 more)
(+1 files in other folders)
